pkg/webhooks/admission/pods/policies/validating-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: pod-validation-policy
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
  variables:
    - name: volcanoScheduler
      expression: |
        has(object.spec.schedulerName) && object.spec.schedulerName == "volcano"
  validations:
    # not allow configure multiple annotations at same time
    - expression: |
        !variables.volcanoScheduler || !(type(object.metadata.annotations) == map) || !has(object.metadata.annotations) || !(
          ("volcano.sh/jdb-min-available" in object.metadata.annotations) &&
          ("volcano.sh/jdb-max-unavailable" in object.metadata.annotations)
        )
      message: "not allow configure multiple annotations at same time"
      reason: Invalid
    # not allow negative values for jdb-min-available
    - expression: |
        !variables.volcanoScheduler || !(type(object.metadata.annotations) == map) || !has(object.metadata.annotations) || !("volcano.sh/jdb-min-available" in object.metadata.annotations) ||
        (
          object.metadata.annotations["volcano.sh/jdb-min-available"].matches('^[0-9]+$') &&
          int(object.metadata.annotations["volcano.sh/jdb-min-available"]) > 0
        ) ||
        (
          object.metadata.annotations["volcano.sh/jdb-min-available"].matches('^[0-9]+%$') &&
          int(object.metadata.annotations["volcano.sh/jdb-min-available"].replace('%', '')) > 0 &&
          int(object.metadata.annotations["volcano.sh/jdb-min-available"].replace('%', '')) < 100
        )
      message: "jdb-min-available must be a positive integer or a valid percentage which between 1% ~ 99%"
      reason: Invalid
    # not allow negative values for jdb-max-unavailable
    - expression: |
        !variables.volcanoScheduler || !(type(object.metadata.annotations) == map) || !has(object.metadata.annotations) || !("volcano.sh/jdb-max-unavailable" in object.metadata.annotations) ||
        (
          object.metadata.annotations["volcano.sh/jdb-max-unavailable"].matches('^[0-9]+$') &&
          int(object.metadata.annotations["volcano.sh/jdb-max-unavailable"]) > 0
        ) ||
        (
          object.metadata.annotations["volcano.sh/jdb-max-unavailable"].matches('^[0-9]+%$') &&
          int(object.metadata.annotations["volcano.sh/jdb-max-unavailable"].replace('%', '')) > 0 &&
          int(object.metadata.annotations["volcano.sh/jdb-max-unavailable"].replace('%', '')) < 100
        )
      message: "jdb-max-unavailable must be a positive integer or a valid percentage which between 1% ~ 99%"
      reason: Invalid

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pod-validation-policy-binding
  labels:
    volcano.sh/component: pod-webhook
    volcano.sh/migration: vap
spec:
  policyName: pod-validation-policy
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: name
          operator: NotIn
          values: ["kube-system", "kube-public", "kube-node-lease"]
